--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -1,15 +1,18 @@
 {% extends 'landing1/BASE.html' %}
 {% block content %}
 <div class="container">
+    <div class="bg-image"
+         style="background-image:url(https://mdbootstrap.com/img/Photos/Others/images/77.jpg);height:75vh;">
     <div class="row justify-content-center mt-5">
         <div class="col-sm-12 col-md-10 text-center">
-            <h1 class="display-2">Feel the Social Experience</h1>
-            <p class ="mt-3 lead">Connect with friends,Share your moments and discover the difference </p>
-            <div class="d-flex justify-content-center mt-5">
-                <a href="#" class="btn btn-light mr-2">Sign in</a>
-                <a href="#" class="btn btn-dark">Register</a>
+            <h1 class="display-2 fw-normal "style="color:#d63384;">Feel the Social Experience</h1>
+            <p class ="mt-3 lead fst-italic fs-4" >Connect with friends,Share your moments and discover the difference </p>
+            <div class="d-flex justify-content-center mt-5 gap-5 d-md-block ">
+                <a href="#" class="btn btn-light btn-lg mr-2 ">Sign in</a>
+                <a href="#" class="btn btn-dark btn-lg">Sign up</a>
             </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock content %}
