--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -9,10 +9,11 @@
             <p class ="mt-3 lead fst-italic fs-4" >Connect with friends,Share your moments and discover the difference </p>
             <div class="d-flex justify-content-center mt-5 gap-5 d-md-block ">
                 <a href="#" class="btn btn-light btn-lg mr-2 ">Sign in</a>
-                <a href="#" class="btn btn-dark btn-lg">Sign up</a>
+                <a href="#" class="btn btn-dark btn-lg">SIGN UP</a>
             </div>
         </div>
     </div>
 </div>
 </div>
 {% endblock content %}
+
