--- a/landing1/Templates/landing1/BASE.html
+++ b/landing1/Templates/landing1/BASE.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     {% block content%}
-    <h1>Landing</h1>
+    {% include 'landing1/NAVIGATION.html' %}
     {% endblock content%}
 
 
