--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -8,8 +8,8 @@
             <h1 class="display-2 fw-normal " style="color:#d63400;">Feel the Social Experience</h1>
             <p class ="mt-3 lead fst-italic fs-4" >Connect with friends,Share your moments and discover the difference </p>
             <div class="d-flex justify-content-center mt-5 gap-5 d-md-block ">
-                <a href="#" class="btn btn-light btn-lg mr-2 ">Sign in</a>
-                <a href="#" class="btn btn-dark btn-lg">Register</a>
+                <a href="{% url 'account_login' %}" class="btn btn-light btn-lg mr-2 ">Sign in</a>
+                <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Register</a>
             </div>
         </div>
     </div>
