--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -1,18 +1,32 @@
-{% extends 'landing1/BASE.html' %}
+{% extends 'landing/base.html' %}
 {% block content %}
-<div class="container">
-    <div class="bg-image"
-         style="background-image:url(https://mdbootstrap.com/img/Photos/Others/images/77.jpg);height:75vh;">
-    <div class="row justify-content-center mt-5">
-        <div class="col-sm-12 col-md-10 text-center">
-            <h1 class="display-2 fw-normal " style="color:#d63400;">Feel the Social Experience</h1>
-            <p class ="mt-4 lead fst-italic fs-4" >Connect with friends,Share your moments and discover the difference </p>
-            <div class="d-flex justify-content-center mt-5 gap-5 d-md-block ">
-                <a href="{% url 'account_login' %}" class="btn btn-light btn-lg mr-2 ">Sign in</a>
-                <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Register</a>
-            </div>
+<header>
+    <style>
+      #intro {
+        background-image: url("https://mdbootstrap.com/img/new/fluid/city/018.jpg");
+        height: 90vh;
+      }
+    </style>
+      <div class="container">
+      <div id="intro" class="bg-image shadow-3-low">
+      <div class="mask" style="background-color:  hsla(0, 100%, 50%, 0.3);">
+          <div class="text-white">
+               <div class="row justify-content-center mt-12">
+                   <div class="col-md-8 col-sm-10 text-center">
+                       <h1 class="display-2 mt-5">Connect With Your Friends</h1>
+                       <p class="mt-3 lead mt-5">Follow people who interest you, stay up to date on the latest news and join conversations with your friends!</p>
+                       <div class="d-flex justify-content-center mt-5 gap-5 d-md-block">
+                           <a href="{% url 'account_login' %}" class="btn btn-light btn-lg mr-2">Sign In</a>
+                           <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Sign Up</a>
+                       </div>
+                   </div>
+               </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</div>
-{% endblock content %}
+ </div>
+    </style>
+</header>
+
+ {% endblock content %}
