--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -17,7 +17,7 @@
                        <p class="mt-3 lead mt-5">Follow people who interest you, stay up to date on the latest news and join conversations with your friends!</p>
                        <div class="d-flex justify-content-center mt-5 gap-5 d-md-block">
                            <a href="{% url 'account_login' %}" class="btn btn-light btn-lg mr-2">Sign In</a>
-                           <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Sign Up</a>
+                           <a href="{% url 'account_signup' %}" class="btn btn-dark btn-lg">Register</a>
                        </div>
                    </div>
                </div>
