--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -8,7 +8,7 @@
       }
     </style>
       <div class="container">
-      <div id="intro" class="bg-image shadow-2-low">
+      <div id="intro" class="bg-image shadow-3-strong">
       <div class="mask" style="background-color:  hsla(0, 100%, 50%, 0.3);">
           <div class="text-white">
                <div class="row justify-content-center mt-12">
