--- a/landing1/Templates/landing1/NAVIGATION.html
+++ b/landing1/Templates/landing1/NAVIGATION.html
@@ -1,10 +1,16 @@
-<div class="container">
+<div class="container" xmlns="http://www.w3.org/1999/html">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="{% url 'INDEX' %}">Stick Social</a>
+    <a class="navbar-brand"
+    {% if user.is_authenticated %}
+    href="{% url 'POST_LIST' %}"
+    {% else%}
+    href="{% url 'INDEX' %}"
+    {% endif %}
+    ><i class="fas fa-comment "></i>Stick Social</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
