--- a/sticksocial/Templates/sticksocial/POST_LIST.html
+++ b/sticksocial/Templates/sticksocial/POST_LIST.html
@@ -13,7 +13,7 @@
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="d-grid gap-2">
-                    <button class="btn btn-success mt-3">SUBMIT</button>
+                    <button class="btn btn-primary mt-3">POST</button>
                 </div>
             </form>
         </div>
