--- a/sticksocial/Templates/sticksocial/POST_LIST.html
+++ b/sticksocial/Templates/sticksocial/POST_LIST.html
@@ -20,9 +20,10 @@
     </div>
     {% for post in POST_LIST %}
     <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom">
+        <div class="col-md-5 col-sm-12 border-bottom position-relative">
             <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
             <p>{{ post.body }}</p>
+            <a href="{% url 'POST_DETAIL' post.pk%}" class="stretched-link"></a>
         </div>
     </div>
     {% endfor %}
