add new html files

--- a/sticksocial/Templates/sticksocial/POST_DETAIL.html
+++ b/sticksocial/Templates/sticksocial/POST_DETAIL.html
@@ -1,6 +1,8 @@
 {% extends 'landing1/BASE.html' %}
 {% load crispy_forms_tags %}
+
 {% block content %}
+
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-5 col-sm-6">
@@ -10,8 +12,20 @@
 
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
+             <p>
+                <strong>{{ post.author }}</strong> {{ post.created_on }}
+                {% if request.user == post.author %}
+                <a href="{% url 'POST_EDIT' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
+                <a href="{% url 'POST_DELETE' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
+                {% endif %}
+            </p>
             <p>{{ post.body }}</p>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-3 mb-5">
+        <div class="col-md-5 col-sm-12">
+            <h5>Add a Comment</h5>
         </div>
     </div>
 
@@ -21,12 +35,26 @@
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="d-grid gap-2">
-
                     <button class="btn btn-primary mt-3">SUBMIT</button>
                 </div>
             </form>
         </div>
     </div>
+
+   {% for comment in comments %}
+    <div class="row justify-content-center mt-3 mb-5 border-bottom">
+        <div class="col-md-5 col-sm-12">
+            <p>
+                <strong>{{ comment.author }}</strong> {{ comment.created_on }}
+                {% if request.user == comment.author %}
+                <a href="{% url 'COMMENT_DELETE' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
+                {% endif %}
+            </p>
+            <p>{{ comment.comment }}</p>
+        </div>
+    </div>
+
+    {% endfor %}
 
 </div>
 {% endblock content %}
