--- a/landing1/Templates/landing1/INDEX.html
+++ b/landing1/Templates/landing1/INDEX.html
@@ -1,16 +1,18 @@
 {% extends 'landing1/BASE.html' %}
 {% block content %}
+
 <header>
+
     <style>
       #intro {
-        background-image: url("https://mdbootstrap.com/img/new/fluid/city/018.jpg");
+        background-image: url("https://chelseakrost.com/wp-content/uploads/2020/09/7-principles-of-successful-and-happy-people.png");
         height: 90vh;
       }
     </style>
+
       <div class="container">
       <div id="intro" class="bg-image shadow-3-strong ">
-      <div class="mask" style="background-color:  hsla(0, 100%, 50%, 0.3);">
-          <div class="text-white">
+          <div class="text-grey">
                <div class="row justify-content-center mt-12">
                    <div class="col-md-8 col-sm-10 text-center">
                        <h1 class="display-2 mt-5">Connect With Your Friends</h1>
@@ -22,11 +24,9 @@
                    </div>
                </div>
           </div>
-        </div>
       </div>
-    </div>
- </div>
-    </style>
+      </div>
+
 </header>
 
  {% endblock content %}
