--- a/sticksocial/Templates/sticksocial/POST_DETAIL.html
+++ b/sticksocial/Templates/sticksocial/POST_DETAIL.html
@@ -25,7 +25,7 @@
 
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12">
-            <h5>Add a Comment</h5>
+            <h5>Add Your Comment</h5>
         </div>
     </div>
 
@@ -42,6 +42,7 @@
     </div>
 
    {% for comment in comments %}
+
     <div class="row justify-content-center mt-3 mb-5 border-bottom">
         <div class="col-md-5 col-sm-12">
             <p>
