--- a/sticksocial/Templates/sticksocial/PROFILE.html
+++ b/sticksocial/Templates/sticksocial/PROFILE.html
@@ -4,13 +4,13 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-3 col-sm-6">
-            <a href="{% url 'post-list' %}" class="btn btn-light">Back to Feed</a>
+            <a href="{% url 'POST_LIST' %}" class="btn btn-light">Back to Feed</a>
 
         </div>
     </div>
     <div class="row justify-content-center mt-5">
         <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 pt-3">
-            <img src="{{ PROFILE.picture.url}}" class="rounded-circle" width="100" height="100" />
+            <img src="{{ profile.picture.url}}" class="rounded-circle" width="100" height="100" />
             {% if profile.name %}
             <h3 class="py-4">{{ profile.name}}
             {% endif %}</h3>
