--- a/sticksocial/Templates/sticksocial/POST_DETAIL.html
+++ b/sticksocial/Templates/sticksocial/POST_DETAIL.html
@@ -25,17 +25,11 @@
 
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12">
-            <h5>Add Your Comment</h5>
-        </div>
-    </div>
-
-    <div class="row justify-content-center mt-3 mb-5">
-        <div class="col-md-5 col-sm-12">
             <form method="POST">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="d-grid gap-2">
-                    <button class="btn btn-primary mt-3">SUBMIT</button>
+                    <button class="btn btn-primary mt-3">POST</button>
                 </div>
             </form>
         </div>
