--- a/sticksocial/Templates/sticksocial/POST_LIST.html
+++ b/sticksocial/Templates/sticksocial/POST_LIST.html
@@ -1,5 +1,6 @@
 {% extends 'landing1/BASE.html' %}
 {% load crispy_forms_tags %}
+
 {% block content %}
 <div class="container">
     <div class="row justify-content-center mt-3">
@@ -7,6 +8,7 @@
             <h5>Add New Post</h5>
         </div>
     </div>
+
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12 border-bottom">
             <form method="POST">
@@ -18,12 +20,15 @@
             </form>
         </div>
     </div>
+
     {% for post in POST_LIST %}
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
-            <p>{{ post.body }}</p>
-            <a href="{% url 'POST_DETAIL' post.pk%}" class="stretched-link"></a>
+            <p><a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
+            <div class="position-relative">
+                <p>{{ post.body }}</p>
+                <a href="{% url 'POST_DETAIL' post.pk %}" class="stretched-link"></a>
+            </div>
         </div>
     </div>
     {% endfor %}
