--- a/sticksocial/Templates/sticksocial/profile.html
+++ b/sticksocial/Templates/sticksocial/profile.html
@@ -5,9 +5,9 @@
     <div class="row mt-5">
         <div class="col-md-3 col-sm-6">
             <a href="{% url 'POST_LIST' %}" class="btn btn-outline-primary">Back to Feed</a>
-
         </div>
     </div>
+
     <div class="row justify-content-center mt-5">
         <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 pt-3">
             <img src="{{ profile.picture.url}}" class="rounded-circle" width="100" height="100" />
@@ -15,16 +15,14 @@
             <h3 class="py-4">{{ profile.name}}
                 <span>
                     {% if request.user == user %}
-                        <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit">
-                        </i></a>
+                        <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit"></i></a>
                     {% endif %}
                 </span>
                 {% else %}
                 <h3 class="py-4">{{ user.username }}
                     <span>
                         {% if request.user == user %}
-                            <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit">
-                            </i></a>
+                            <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit"></i></a>
                         {% endif %}
                     </span>
                 </h3>
@@ -43,15 +41,35 @@
             <p>{{ profile.bio}}</p>
             {% endif %}
 
+             <div class="mb-3">
+                <p>Followers: {{ number_of_followers }}</p>
+                {% if user == request.user %}
+                {% else %}
+                {% if is_following %}
+                <form method="POST" action="{% url 'remove-follower' profile.pk %}">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-danger" type="submit">Unfollow</button>
+                </form>
+                {% else %}
+                <form method="POST" action="{% url 'add-follower' profile.pk %}">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-success" type="submit">Follow</button>
+                </form>
+                {% endif %}
+                {% endif %}
+            </div>
         </div>
     </div>
+
     {% for post in posts %}
     <div class="row justify-content-center mt-5">
-        <div class="col-md-8 col-sm-12 border-bottom position-relative">
-            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
-            <p>{{ post.body }}</p>
-            <a href="{% url 'POST_DETAIL' post.pk%}" class="stretched-link"></a>
-        </div>
+         <div class="col-md-8 col-sm-12 border-bottom">
+            <p><a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
+            <div class="position-relative">
+                <p>{{ post.body }}</p>
+                <a href="{% url 'POST_DETAIL' post.pk %}" class="stretched-link"></a>
+            </div>
+         </div>
     </div>
     {% endfor %}
 </div>
