--- a/sticksocial/Templates/sticksocial/profile.html
+++ b/sticksocial/Templates/sticksocial/profile.html
@@ -1,28 +1,28 @@
-{% extends 'landing1/BASE.html' %}
+ {% extends 'landing1/BASE.html' %}
 
 {% block content %}
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-3 col-sm-6">
-            <a href="{% url 'POST_LIST' %}" class="btn btn-outline-primary">Back to Feed</a>
+            <a href="{% url 'POST_LIST' %}" class="btn btn-light">Back to Feed</a>
         </div>
     </div>
 
     <div class="row justify-content-center mt-5">
         <div class="card shadow-sm col-md-8 col-sm-12 border-bottom px-5 pt-3">
-            <img src="{{ profile.picture.url}}" class="rounded-circle" width="100" height="100" />
+            <img src="{{ profile.picture.url }}" class="rounded-circle" width="100" height="100" />
             {% if profile.name %}
-            <h3 class="py-4">{{ profile.name}}
+            <h3 class="py-4">{{ profile.name }}
                 <span>
                     {% if request.user == user %}
-                        <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit"></i></a>
+                        <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color: #333"><i class="far fa-edit"></i></a>
                     {% endif %}
                 </span>
                 {% else %}
                 <h3 class="py-4">{{ user.username }}
                     <span>
                         {% if request.user == user %}
-                            <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color:#333"><i class="far fa-edit"></i></a>
+                            <a href="{% url 'PROFILE_EDIT' profile.pk %}" style="color: #333"><i class="far fa-edit"></i></a>
                         {% endif %}
                     </span>
                 </h3>
@@ -30,18 +30,18 @@
             </h3>
 
             {% if profile.location %}
-            <p>{{ profile.location}}</p>
+            <p>{{ profile.location }}</p>
             {% endif %}
 
             {% if profile.birth_date %}
-            <p>{{ profile.birth_date}}</p>
+            <p>{{ profile.birth_date }}</p>
             {% endif %}
 
             {% if profile.bio %}
-            <p>{{ profile.bio}}</p>
+            <p>{{ profile.bio }}</p>
             {% endif %}
 
-             <div class="mb-3">
+            <div class="mb-3">
                 <p>Followers: {{ number_of_followers }}</p>
                 {% if user == request.user %}
                 {% else %}
@@ -63,30 +63,31 @@
 
     {% for post in posts %}
     <div class="row justify-content-center mt-5">
-         <div class="col-md-8 col-sm-12 border-bottom">
+        <div class="col-md-8 col-sm-12 border-bottom">
             <p><a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
             <div class="position-relative">
                 <p>{{ post.body }}</p>
                 <a href="{% url 'POST_DETAIL' post.pk %}" class="stretched-link"></a>
             </div>
-             <div class="d-flex flex-row">
+
+            <div class="d-flex flex-row">
                 <form method="POST" action="{% url 'like' post.pk %}">
                     {% csrf_token %}
-                    <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
-                        <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
-                    </button>
-                </form> 
-                
-                <form method="POST" action="{% url 'dislike' post.pk %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
-                        <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
                     </button>
                 </form>
-            </div> 
-         </div>
+
+                <form method="POST" action="{% url 'dislike' post.pk %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                    </button>
+                </form>
+        </div>
+        </div>
     </div>
     {% endfor %}
 </div>
