--- a/landing1/Templates/landing1/NAVIGATION.html
+++ b/landing1/Templates/landing1/NAVIGATION.html
@@ -10,6 +10,7 @@
     {% else%}
     href="{% url 'INDEX' %}"
     {% endif %}
+
     ><i class="fas fa-comment "></i>Stick Social</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -18,7 +19,7 @@
         <div class="input-group">
           <span class="input-group-text" id="basic-addon1">@</span>
           <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" name="query" value="{{ request.GET.query}}">
-          <button style="border: none; background-color: transparent; box-shadow: none" type="submit"><i class="fas fa-search"></i></button>
+          <button class=" remove-default-btn" type="submit"><i class="fas fa-search"></i></button>
       </div>
       </form>
       {% if user.is_authenticated %}
