--- a/sticksocial/Templates/sticksocial/COMMENT_DELETE.html
+++ b/sticksocial/Templates/sticksocial/COMMENT_DELETE.html
@@ -1,12 +1,10 @@
 {% extends 'landing1/BASE.html' %}
-{% load crispy_forms_tags %}
 
 {% block content %}
-
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-3 col-sm-6">
-            <a href="{% url 'POST_DETAIL' object.post.pk %}" class="btn btn-outline-primary">Back to Feed</a>
+            <a href="{% url 'POST_DETAIL' object.post.pk %}" class="btn btn-light">Back to the post</a>
         </div>
     </div>
 
