--- a/sticksocial/Templates/sticksocial/POST_LIST.html
+++ b/sticksocial/Templates/sticksocial/POST_LIST.html
@@ -24,16 +24,24 @@
     {% for post in POST_LIST %}
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <p><a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}</p>
+            <div>
+                <a href="{% url 'profile' post.author.profile.pk %}">
+                    <img class="round-circle post-img" height="30" width="30" src="{{ post.author.profile.picture.url }}" />
+                </a>
+                <p class="post-text">
+                    <a class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                </p>
+            </div>
             <div class="position-relative">
                 <p>{{ post.body }}</p>
                 <a href="{% url 'POST_DETAIL' post.pk %}" class="stretched-link"></a>
             </div>
+
             <div class="d-flex flex-row">
                 <form method="POST" action="{% url 'like' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
+                    <button  class="remove-default-btn" type="submit">
                         <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
                     </button>
                 </form> 
@@ -41,7 +49,7 @@
                 <form method="POST" action="{% url 'dislike' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
+                    <button class="remove-default-btn" type="submit">
                         <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
                     </button>
                 </form>
