--- a/sticksocial/Templates/sticksocial/POST_DETAIL.html
+++ b/sticksocial/Templates/sticksocial/POST_DETAIL.html
@@ -2,7 +2,6 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-5 col-sm-6">
@@ -12,19 +11,25 @@
 
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-             <p>
-                <strong>{{ post.author }}</strong> {{ post.created_on }}
-                {% if request.user == post.author %}
-                <a href="{% url 'POST_EDIT' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
-                <a href="{% url 'POST_DELETE' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
-                {% endif %}
-            </p>
+             <div>
+                 <a href="{% url 'profile' post.author.profile.pk %}">
+                     <img class="round-circle post-img" height="30" width="30" src="{{ post.author.profile.picture.url }}" />
+                 </a>
+                 <p class="post-text">
+                     <a class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                 </p>
+             </div>
+            {% if request.user == post.author %}
+                <a href="{% url 'POST_EDIT' post.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
+                <a href="{% url 'POST_DELETE' post.pk %}" class="edit-color"><i class="fas fa-trash"></i></a>
+            {% endif %}
             <p>{{ post.body }}</p>
+
             <div class="d-flex flex-row">
                 <form method="POST" action="{% url 'like' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
+                    <button  class="remove-default-btn" type="submit">
                         <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
                     </button>
                 </form> 
@@ -32,7 +37,7 @@
                 <form method="POST" action="{% url 'dislike' post.pk %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ request.path}}">
-                    <button style ="background-color:transparent; border:none; box-shadow:none;" type="submit">
+                    <button class="remove-default-btn"  type="submit">
                         <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
                     </button>
                 </form>
@@ -51,22 +56,25 @@
             </form>
         </div>
     </div>
-
    {% for comment in comments %}
-
     <div class="row justify-content-center mt-3 mb-5 border-bottom">
         <div class="col-md-5 col-sm-12">
             <p>
-                <strong>{{ comment.author }}</strong> {{ comment.created_on }}
+                <div>
+                    <a href="{% url 'profile' comment.author.profile.pk %}">
+                        <img class="round-circle post-img" height="30" width="30" src="{{ comment.author.profile.picture.url }}" />
+                    </a>
+                    <p class="post-text">
+                        <a class="text-primary post-link" href="{% url 'profile' comment.author.profile.pk %}">@{{ comment.author }}</a> {{ comment.created_on }}
+                    </p>
+                </div>
                 {% if request.user == comment.author %}
-                <a href="{% url 'COMMENT_DELETE' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
+                      <a href="{% url 'comment-delete' post.pk comment.pk %}" class="edit-color"><i class="fas fa-trash"></i></a>
                 {% endif %}
             </p>
             <p>{{ comment.comment }}</p>
         </div>
     </div>
-
     {% endfor %}
-
 </div>
 {% endblock content %}
