--- a/social/templates/social/post_list.html
+++ b/social/templates/social/post_list.html
@@ -2,70 +2,75 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container feed-text">
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom ">
-            <h5>Add a post!</h5>
-        </div>
-    </div>
-
-    <div class="row justify-content-center mt-3 mb-5">
-        <div class="col-md-5 col-sm-12 border-bottom">
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form | crispy }}
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary mt-3">Post</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    {% for post in post_list %}
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom position-relative">
-            <div>
-                <a href="{% url 'profile' post.author.profile.pk%}">
-                    <img class="rounded-circle post-img" height="30" width="30" src="{{ post.author.profile.picture.url}}"/>
-                </a>
-                <p class="post-text">
-                    <a  class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
-                </p>
+<header>
+    <style>
+      body {
+    background-image: url("https://st4.depositphotos.com/1035451/20334/v/1600/depositphotos_203346284-stock-illustration-social-media-vector-background-network.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+    </style>
+    <div class="container feed-text">
+        <div class="row justify-content-center mt-3">
+            <div class="col-md-5 col-sm-12 border-bottom ">
+                <h5>Add a post!</h5>
             </div>
-            <div class ="position-relative">
-                {% if post.image.count > 0 %}
-                <div class="row">
-                    {% for img in post.image.all %}
+        </div>
+        <div class="row justify-content-center mt-3 mb-5">
+            <div class="col-md-5 col-sm-12 border-bottom">
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary mt-3">Post</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {% for post in post_list %}
+        <div class="row justify-content-center mt-3">
+            <div class="col-md-5 col-sm-12 border-bottom position-relative">
+                <div>
+                    <a href="{% url 'profile' post.author.profile.pk%}">
+                        <img class="rounded-circle post-img" height="30" width="30" src="{{ post.author.profile.picture.url}}"/>
+                    </a>
+                    <p class="post-text">
+                        <a  class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                    </p>
+                </div>
+                <div class ="position-relative">
+                    {% if post.image.count > 0 %}
+                    <div class="row">
+                        {% for img in post.image.all %}
                         <div class="col-md-4 col-xs-12">
                             <img src="{{ img.image.url }}" class="post-image" />
                         </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    <p>{{ post.body }}</p>
+                    <a href="{% url 'post-detail' post.pk %}" class=" stretched-link"></a>
                 </div>
-                {% endif %}
-                <p>{{ post.body }}</p>
-                <a href="{% url 'post-detail' post.pk %}" class=" stretched-link">
-                </a>
-            </div>
-            <div class="d-flex flex-row">
-                <form method="POST" action="{% url 'like' post.pk %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="next" value="{{ request.path }}">
-                    <button class="remove-default-btn" type="submit">
-                        <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
-                    </button>
-                </form>
-
-                <form method="POST" action="{% url 'dislike' post.pk %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="next" value="{{ request.path }}">
-                    <button class="remove-default-btn" type="submit">
-                        <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
-                    </button>
-                </form>
-
+                <div class="d-flex flex-row">
+                    <form method="POST" action="{% url 'like' post.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{ request.path }}">
+                        <button class="remove-default-btn" type="submit">
+                            <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
+                        </button>
+                    </form>
+                    <form method="POST" action="{% url 'dislike' post.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{ request.path }}">
+                        <button class="remove-default-btn" type="submit">
+                            <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
+</header>
 {% endblock content %}
