--- a/landing/templates/landing/navbar.html
+++ b/landing/templates/landing/navbar.html
@@ -8,7 +8,7 @@
        href="{% url 'index' %}"
        {% endif %}
 
-    >Stick Social</a>
+    ><h5 class="fst-italic ">Stick Social</h5></a>
     <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
