add background image

--- a/social/templates/social/post_delete.html
+++ b/social/templates/social/post_delete.html
@@ -1,7 +1,16 @@
 {% extends 'landing/base.html' %}
 
 {% block content %}
-<div class="container">
+<header>
+    <style>
+      body {
+    background-image: url("https://st4.depositphotos.com/1035451/20334/v/1600/depositphotos_203346284-stock-illustration-social-media-vector-background-network.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+    </style>
+    <div class="container">
     <div class="row mt-5">
         <div class="col-md-5 col-sm-6 ">
 
@@ -21,5 +30,6 @@
             </form>
         </div>
     </div>
-</div>
+    </div>
+</header>
 {% endblock content %}
