--- a/social/templates/social/comment_delete.html
+++ b/social/templates/social/comment_delete.html
@@ -1,22 +1,32 @@
 {% block content %}
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-md-5 col-sm-6 ">
-            <a href="{% url 'post-detail' object.post.pk %}" class="btn btn-outline-primary"> Back to Post</a>
+<header>
+    <style>
+      body {
+    background-image: url("https://st4.depositphotos.com/1035451/20334/v/1600/depositphotos_203346284-stock-illustration-social-media-vector-background-network.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+    </style>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-5 col-sm-6 ">
+                <a href="{% url 'post-detail' object.post.pk %}" class="btn btn-outline-primary"> Back to Post</a>
+            </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center mt-3 mb-5">
-        <div class="col-md-5 col-sm-12 border-bottom">
-            <form method="POST">
-                {% csrf_token %}
-                <h5>Are You Sure?</h5>
-                <p> You are about to delete this comment, this can't be undone.</p>
-                <div class="d-grid gap-2">
-                    <button class="btn btn-danger mt-3">Delete</button>
-                </div>
-            </form>
+        <div class="row justify-content-center mt-3 mb-5">
+            <div class="col-md-5 col-sm-12 border-bottom">
+                <form method="POST">
+                    {% csrf_token %}
+                    <h5>Are You Sure?</h5>
+                    <p> You are about to delete this comment, this can't be undone.</p>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-danger mt-3">Delete</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+</header>
 {% endblock content %}
