--- a/social/templates/social/followers_list.html
+++ b/social/templates/social/followers_list.html
@@ -1,28 +1,38 @@
 {% extends 'landing/base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-md-3 col-sm-6">
-            <a href="{% url 'profile' profile.pk %}" class="btn btn-outline-primary">Back to Profile</a>
-        </div>
-    </div>
-        <div class="row justify-content-center mt-3">
-            <div class="col-md-5 col-sm-12">
-                {% if profile.name %}
-                <h3>Followers for {{ profile.name}}</h3>
-                {% else %}
-                <h3>Followers for @{{ profile.user.username }}</h3>
-                {% endif %}
+<header>
+    <style>
+      body {
+    background-image: url("https://st4.depositphotos.com/1035451/20334/v/1600/depositphotos_203346284-stock-illustration-social-media-vector-background-network.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+    </style>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-3 col-sm-6">
+                <a href="{% url 'profile' profile.pk %}" class="btn btn-outline-primary">Back to Profile</a>
             </div>
         </div>
-    {% for follower in followers %}
-    <div class="row justify-content-center">
-        <div class="col-md-5 col-sm-12 position-relative my-3">
-            <a href="{% url 'profile' follower.profile.pk %}" class="post-link"><img class="rounded-circle post-img" height="60" width="60" src="{{ follower.profile.picture.url }}"/></a>
-            <a href="{% url 'profile' follower.profile.pk %}" class="post-link"><h5 class="mt-3">@{{ follower.username }}</h5></a>
+            <div class="row justify-content-center mt-3">
+                <div class="col-md-5 col-sm-12">
+                    {% if profile.name %}
+                    <h3>Followers for {{ profile.name}}</h3>
+                    {% else %}
+                    <h3>Followers for @{{ profile.user.username }}</h3>
+                    {% endif %}
+                </div>
+            </div>
+        {% for follower in followers %}
+        <div class="row justify-content-center">
+            <div class="col-md-5 col-sm-12 position-relative my-3">
+                <a href="{% url 'profile' follower.profile.pk %}" class="post-link"><img class="rounded-circle post-img" height="60" width="60" src="{{ follower.profile.picture.url }}"/></a>
+                <a href="{% url 'profile' follower.profile.pk %}" class="post-link"><h5 class="mt-3">@{{ follower.username }}</h5></a>
+            </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
+</header>
 {% endblock content %}
