--- a/social/templates/social/search.html
+++ b/social/templates/social/search.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col-md-5 col-sm-6 ">
-                <a href="{% url 'post-list' %}" class="btn btn-primary"> Back to Feed</a>
+                <a href="{% url 'post-list' %}" class="btn btn-outline-primary"> Back to Feed</a>
             </div>
         </div>
 
