--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -51,7 +51,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
+                            <i class="far fa-thumbs-up" style="color:#0d6efd"> <span>{{ post.likes.all.count}}</span></i>
                         </button>
                     </form>
 
@@ -59,7 +59,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
+                            <i class="far fa-thumbs-down" style="color:#0d6efd"> <span>{{ post.dislikes.all.count}}</span></i>
                         </button>
                     </form>
 
@@ -103,7 +103,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-up"> <span>{{ comment.likes.all.count}}</span></i>
+                            <i class="far fa-thumbs-up" style="color:#0d6efd"> <span>{{ comment.likes.all.count}}</span></i>
                         </button>
                     </form>
 
@@ -111,11 +111,11 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-down"> <span>{{ comment.dislikes.all.count}}</span></i>
+                            <i class="far fa-thumbs-down" style="color:#0d6efd"> <span>{{ comment.dislikes.all.count}}</span></i>
                         </button>
                     </form>
                     <div>
-                        <button class="remove-default-btn"><i class="far fa-comment-dots" onclick="commentReplyToggle('{{ comment.pk }}')"></i></button>
+                        <button class="remove-default-btn"><i class="far fa-comment-dots" style="color:#0d6efd" onclick="commentReplyToggle('{{ comment.pk }}')"></i></button>
                     </div>
 
                 </div>
