--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -115,7 +115,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count}}</span></i>
+                            <i class="far fa-thumbs-up" style="color:#0d6efd"> <span>{{ post.likes.all.count}}</span></i>
                         </button>
                     </form>
 
@@ -123,7 +123,7 @@
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
                         <button class="remove-default-btn" type="submit">
-                            <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count}}</span></i>
+                            <i class="far fa-thumbs-down" style="color:#0d6efd"> <span>{{ post.dislikes.all.count}}</span></i>
                         </button>
                     </form>
 
